add regional dialplan

--- a/views/edit.html
+++ b/views/edit.html
@@ -332,7 +332,7 @@
                                        <li class="settings-item {{#unless account.enabled}}disabled{{/unless}}" data-name="dialplan_settings">
                                                         <a class="settings-link clearfix">
                                                                 <span class="title">{{ i18n.account.dialplan.title }}</span>
-                                                                <span class="description">{{ i18n.account.dialplan.descript }}</span>
+                                                                <span class="description">{{ i18n.account.dialplan.descript }}: {{ account.regiodialplan }}</span>
                                                                 <span class="update">
                                                                         <i class="fa fa-cog icon-small"></i>
                                                                         <span class="text">{{ i18n.editSettings }}</span>
@@ -344,11 +344,10 @@
                                                                     <div class="span12">
                                                                             <form id="form_dialplan_account" class="form-horizontal">
                                                                                     <div class="control-group">
-                                                                                            <label class="control-label" for="dialplan_account">{{ i18n.account.dialplan.account }}</label>
-                                                                                            <div class="controls">
-                                                                                                <div class="custom-data-container"></div>
-                                                                                                <a class="monster-link custom-data-link">{{i18n.account.dialplan.descript}}</a>
-                                                                                            </div>
+											<label class="control-label" for="accountsmanager_account_regiodialplan">{{ i18n.account.dialplan.descript }}</label>
+											<div class="controls">
+												<select id="accountsmanager_account_regiodialplan" name="regiodialplan" data-original_value="{{ account.regiodialplan }}"></select>
+											</div>
                                                                                     </div>
                                                                                     <div class="action-group clearfix">
                                                                                             <div class="action-bar">
