--- a/views/edit.html
+++ b/views/edit.html
@@ -300,7 +300,7 @@
                                        <li class="settings-item {{#unless account.enabled}}disabled{{/unless}}" data-name="fraud_settings">
                                                         <a class="settings-link clearfix">
                                                                 <span class="title">{{ i18n.account.fraud.title }}</span>
-                                                                <span class="description">{{ i18n.account.fraud.perday_descript }}: {{account.limit.fraud.perday}}</span>
+                                                                <span class="description">{{ i18n.account.fraud.perday_descript }}: {{account.limits.fraud.perday}}</span>
                                                                 <span class="update">
                                                                         <i class="fa fa-cog icon-small"></i>
                                                                         <span class="text">{{ i18n.editSettings }}</span>
@@ -314,7 +314,7 @@
                                                                                     <div class="control-group">
                                                                                             <label class="control-label" for="fraud_limit_perday">{{ i18n.account.fraud.perday }}</label>
                                                                                             <div class="controls">
-                                                                                                    <input type="text" id="fraud_limit_perday" name="limit.fraud.perday" value="{{account.limit.fraud.perday}}" placeholder="{{ i18n.account.fraud.perdaydefault }}" data-original_value="{{account.limit.fraud.perday}}"/>
+                                                                                                    <input type="text" id="fraud_limit_perday" name="limits.fraud.perday" value="{{account.limits.fraud.perday}}" placeholder="{{ i18n.account.fraud.perdaydefault }}" data-original_value="{{account.limits.fraud.perday}}"/>
                                                                                             {{ i18n.account.fraud.perday_descript }}</div>
                                                                                     </div>
                                                                                     <div class="action-group clearfix">
